--- a/index.html
+++ b/index.html
@@ -52,25 +52,19 @@
                     <div class="kinder dispaly-flex">
                         <img src="assets/kinder.png" alt="" class="kinder-img three">
                         <h4 class="kinder-title standars-title">Kinder (3-6) Years</h4>
-                        <p class="standard-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p class="standard-description">Kindergarten is a preschool educational approach based on playing, singing, practical activities....</p>
                         <p class="kinder-footer standard-footer">Read More</p>
                     </div>
                     <div class="elementary dispaly-flex">
                         <img src="assets/elementary.png" alt="" class="elementare-img three">
                         <h4 class="elementary-title standars-title">Elementary School</h4>
-                        <p class="standard-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p class="standard-description">Elementary schools are the main point of delivery of primary education, for children between the ages of 4–11....</p>
                         <p class="elementary-footer standard-footer">Read More</p>
                     </div>
                     <div class="middle dispaly-flex">
                         <img src="assets/middle.png" alt="" class="middle-img three">
                         <h4 class="middle-title standars-title">Middle (10-16) Years</h4>
-                        <p class="standard-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p class="standard-description">The students in basic secondary, roughly equivalent to middle school, students in middle school are usually between....</p>
                         <p class="middle-footer standard-footer">Read More</p>
                     </div>
                 </div>
@@ -134,6 +128,9 @@
         </section>
     </main>
     <footer class="eight">
+        <marquee direction="left" class="recent">
+            Our Benefits: Improved grades....Excelent Teachers....Fun Activities....Support groups....Tutoring....
+            </marquee>
         <section class="align dispaly-flex mango">
         <div class="apple">
             <div class="banana dispaly-flex">
@@ -141,7 +138,7 @@
                 <h2 class="pine-apple">Kids
                     Education</h2>
             </div>
-            <p class="water">Pizza ipsum dolor meat lovers buffalo.Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            <p class="water">I have Always Loved The First Day of Better Then the Last Day of School,Firsts are Best Because They are Beginnings</p>
         </div>
         <div class="lemon">
             <h4 class="guava">About School</h4>
