--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <h2 class="pine-apple">Kids
                     Education</h2>
             </div>
-            <p class="water">I have Always Loved The First Day of Better Then the Last Day of School,Firsts are Best Because They are Beginnings</p>
+            <p class="water">An educational institution designed specifically for young children, where they learn basic academic skills, social interactions, and personal development.</p>
         </div>
         <div class="lemon">
             <h4 class="guava">About School</h4>
